tests/snapshots/unicode_edge_cases_test__mixed_ltr_rtl.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 2

Buffer:
hello مرحبا [w]orld
