tests/snapshots/unicode_edge_cases_test__mixed_word_boundaries.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 1

Buffer:
hello世界test
