tests/snapshots/unicode_edge_cases_test__precomposed.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test1.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 2

Buffer:
caf[é]
