tests/snapshots/unicode_edge_cases_test__replace_unicode_with_ascii.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[x]界
